# xdg-desktop-portal-uni

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SourceSelector.qml  main.cpp  mutterdisplayconfig.h  mutterscreencast.cpp  screencast.cpp  screencast.h  screencastrequest.h  screencastsession.h  sourceselector.cpp  sourceselector.h  testdeploy.sh
data/: org.freedesktop.impl.portal.desktop.uni.service.in  uni.portal  xdg-desktop-portal-uni.service.in
qml/: SourceSelector.qml
src/: main.cpp  screencast.cpp  screencast.h  screencastrequest.cpp  screencastsession.cpp  sourceselector.cpp  sourceselector.h
src/niri/: mutterdisplayconfig.cpp  mutterscreencast.cpp  mutterscreencast.h  muttershellintrospect.cpp  muttershellintrospect.h
